--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ pyperclip~=1.9.0
 selenium~=4.22.0
 playsound~=1.3.0
 requests~=2.32.3
+langchain~=0.2.6
+langchain-openai~=0.1.14
+streamlit-audiorec~=0.1.3
